--- a/03HTML_CSS_JAVASCRIPT/HTML/13배경이미지넣기.html
+++ b/03HTML_CSS_JAVASCRIPT/HTML/13배경이미지넣기.html
@@ -18,7 +18,7 @@
         <div>7</div>
     </div>
     <hr>
-    <h1>배경이미지 넣기</h1>
+    <h1 id="top">배경이미지 넣기</h1>
     <div id="backimg">
         <div>1 삽입된 이미지가 반복</div>
         <div>2 삽입된 이미지가 영역 크기에 맞추어 반복</div>
@@ -59,5 +59,57 @@
         <img src="../img/rose.jpg" alt="장미">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, beatae ducimus rem hic ipsum eum necessitatibus natus. Nesciunt officiis nostrum error hic corrupti quas accusantium obcaecati reiciendis quod sapiente blanditiis, culpa voluptatem mollitia necessitatibus aliquid dolorem vitae pariatur numquam dicta harum. Aperiam fuga voluptatibus, eum veritatis ullam saepe, eos, id facere officia unde quia dignissimos possimus nulla sunt illum adipisci necessitatibus cumque qui eius quod. Magnam minus, at nisi velit aliquid, voluptatum, nesciunt expedita provident nulla distinctio exercitationem iusto aut maiores omnis illo amet laboriosam! Earum corrupti asperiores cumque hic illum perferendis ex optio voluptas amet aperiam rerum perspiciatis eos laboriosam harum iusto reprehenderit qui, dignissimos non dolor, exercitationem ullam cum quo? Ex sit, eos dignissimos cum mollitia sequi odit nisi consequatur ipsum dolorem dicta omnis. Sequi ducimus, amet magni tempore nihil adipisci velit ex dignissimos voluptatibus sint quas animi quia unde ab laborum provident iste. Assumenda reiciendis non nihil recusandae accusantium molestias suscipit voluptatibus, earum, ex ratione deserunt fugit nemo rerum quibusdam architecto eum consequatur beatae minima qui in, ullam ducimus eveniet corporis! Veniam, labore? Itaque rerum, quisquam ut molestiae hic architecto eius ad sint voluptatum eaque a dolorum aperiam magni. Corrupti delectus aut veritatis neque unde ex accusantium culpa beatae assumenda, voluptas qui commodi temporibus recusandae enim ipsa pariatur nesciunt iusto nemo sint cupiditate libero maxime! Quia mollitia reprehenderit, odit explicabo tempore facere exercitationem veniam sapiente recusandae dolorum corporis nesciunt labore suscipit officia doloremque, ullam iste voluptas dicta. Quas doloribus earum itaque in culpa cum maiores eaque fuga a iste doloremque iusto beatae autem eos magni saepe explicabo hic ratione excepturi nam, iure quibusdam pariatur. Quis enim, odit, officiis iste, odio modi aspernatur vero dolorum minus voluptatibus neque nihil? Totam vero quos corrupti quae natus non distinctio, dolorem, velit, veniam suscipit asperiores recusandae iusto ducimus ab in. Atque!.</p>
     </div>
-</body>
+    <hr>
+    <h1>position 요소를 자유롭게 배치하기</h1>
+    <div id="position">
+        <a href="#top">
+            <div class="box red-box">red box 맨위로</div>
+        </a>
+        <a href="#">
+                <div class="box green-box">green box 처음으로</div>
+        </a>
+        <div class="box blue-box">blue box</div>
+    </div>
+    <hr>
+    <h1>겹쳐있는 요소의 z축 순서 정하기</h1>
+    <div id="zindex">
+        <div class="zileft">left</div>
+        <div class="zimddle">middle</div>
+        <div class="ziright">right</div>
+    </div>
+    <hr>
+    <h1>투명도 설정하기</h1>
+    <div id="opacity">
+        <div class="opleft">left</div>
+        <div class="opmiddle">middle</div>
+        <div class="opright">right</div>
+    </div>
+    <hr>
+    <h1>그림자 설정하기</h1>
+    <div id="shadow">
+        <div class="shleft">left</div>
+        <div class="shmiddle">middle</div>
+        <div class="shright">right</div>
+    </div>
+    <hr>
+    <h1>border-radius 모서리 둥글게 만들기 </h1>
+    <div id="radius">
+        <div class="left">left</div>
+        <div class="middle">middle</div>
+        <div class="right">right</div>
+    </div>
+    <hr>
+    <h1>필터로 특수 효과 적용하기</h1>
+    <div id="filter">
+        <div class="box">blur</div>
+        <div class="box">brightness</div>
+        <div class="box">contrast</div>
+        <div class="box">grayscale</div>
+        <div class="box">hue-rotate</div>
+        <div class="box">invert</div>
+        <div class="box">saturate</div>
+        <div class="box">sepia</div>
+    </div>
+
+    <div style="margin-bottom: 80%;"></div>
 </html>
