--- a/03HTML_CSS_JAVASCRIPT/Fintech_app/form.html
+++ b/03HTML_CSS_JAVASCRIPT/Fintech_app/form.html
@@ -1,58 +1,83 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>문의/가입</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>문의/가입</title>
 </head>
 <body>
-    <div id="title">
-        <h1 >문의/가입</h1>
+  <!-- =============================
+       Title Section: 페이지 제목
+  ============================== -->
+  <div id="title">
+    <h1>문의/가입</h1>
+  </div>
+
+  <!-- =============================
+       Form Section: 문의 및 가입 폼
+  ============================== -->
+  <form action="#" method="post">
+
+    <!-- 기본 정보 입력 영역 -->
+    <fieldset>
+      <legend>기본 정보</legend>
+
+      <!-- 이름 입력 -->
+      <div>
+        <label for="name">이름</label><br>
+        <input type="text" id="name" name="name" placeholder="홍길동">
+      </div>
+
+      <!-- 이메일 입력 -->
+      <div>
+        <label for="email">이메일</label><br>
+        <input type="email" id="email" name="email" placeholder="you@example.com">
+      </div>
+
+      <!-- 문의 유형 선택 -->
+      <div>
+        <label for="type">문의 유형</label><br>
+        <select name="type" id="type">
+          <option value="" selected>선택하세요</option>
+          <option value="signup">가입문의</option>
+          <option value="pricing">요금 문의</option>
+          <option value="support">기술 지원</option>
+          <option value="etc">기타</option>
+        </select>
+      </div>
+
+      <!-- 해외 결제 여부 라디오 버튼 -->
+      <div id="interp">
+        <label>해외 결제 이용</label><br>
+        <label><input type="radio" name="fp" value="yes"> 예</label>
+        <label><input type="radio" name="fp" value="no"> 아니오</label>
+      </div>
+
+      <!-- 메시지 입력 -->
+      <div>
+        <label for="message">메시지</label><br>
+        <textarea name="message" id="message" rows="6" placeholder="문의 내용을 적어주세요"></textarea>
+      </div>
+
+      <!-- 개인정보 동의 체크박스 -->
+      <div>
+        <label>
+          <input id="agree" name="agree" type="checkbox">
+          개인정보 처리방침에 동의합니다.
+        </label>
+        <p>제출 시 동의로 간주됩니다.</p>
+      </div>
+    </fieldset>
+
+    <!-- 버튼 영역 -->
+    <div id="bb">
+      <button type="submit">제출</button>
+      <button type="reset">초기화</button>
     </div>
-    <form action="#" method="post">
-        <fieldset>
-            <legend>기본 정보</legend>
-            <div>
-                <label for="name">이름</label><br>
-                <input type="text" id="name" name="'name" placeholder="홍길동">
-            </div>
-            <div>
-                <label for="email">이메일</label><br>
-                <input type="text" id="email" name="'email" placeholder="you@example.com">
-            </div>
-            <div>
-                <label for="type">문의 유형</label><br>
-                <select name="type" id="type">
-                    <option value="" selected>선택하세요</option>
-                    <option value="signup" >가입문의</option>
-                    <option value="pricing" >요금 문의</option>
-                    <option value="support" >기술 지원</option>
-                    <option value="etc" >기타</option>
-                </select>
-            </div>
-            <div id="interp">
-                <legend>해외 결제 이용</legend>
-                <label><input type="radio" name="fp" value="yes">예</label>
-                <label><input type="radio" name="fp" value="ㅜㅐ">아니오</label>
-            </div>
-            <div>
-                <label for="message">메시지</label><br>
-                <textarea name="message" id="message" rows="6" placeholder="문의 내용을 적어주세요"></textarea>
-            </div>
-            <div>
-                <label>
-                    <input id="agree" name="agree" type="checkbox">
-                    개인정보 처리방침에 동의합니다.
-                </label>
-                <p>제출 시 동의로 간주됩니다.</p>
-            </div>
-        </fieldset>
-        <div id="bb">
-            <button type="submit">제출</button>
-            <button type="reset">초기화</button>
-        </div>
-        <a href="./index.html">메인 페이지로</a>
-    </form>
+
+    <!-- 메인 페이지 이동 링크 -->
+    <a href="./index.html">메인 페이지로</a>
+  </form>
 </body>
 </html>
